Add exclamation point, dude

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" type="text/css" href="css.css">
 </head>
 <body>
-  <h1>Learn to Code - 90s Style</h1>
+  <h1>Learn to Code! 90s Style</h1>
 <div><a href="http://web.archive.org/web/19980118170144/http://www.freezone.com:80/brain/html/html.html"><img src="img/freezone.jpg"></a></div>
 <div><a href="http://web.archive.org/web/20000303173203/http://www.gurl.com:80/hq/help/tutorial/tutorial.html  "><img src="img/gurl.jpg"></a></div>
 <div><a href="http://web.archive.org/web/19991006020450/http://www.hotwired.com:80/webmonkey/geektalk/97/36/index3a.html"><img src="img/hotwire.jpg"></a></div>
